--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+  &,
   &:link,
   &:visited {
     text-transform: uppercase;
@@ -9,6 +10,8 @@
     transition: all 0.2s;
     position: relative;
     margin-top: 5rem;
+    border: none;
+    cursor: pointer;
   }
 
   &--white {
@@ -33,7 +36,9 @@
     transform: translateY(-0.3rem);
     box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
   }
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(0.1rem);
     box-shadow: 0 1rem 1rem rgba($color-black, 0.5);
   }
