--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/form.scss";
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
@@ -16,4 +17,6 @@
 
 @import "layout/header";
 @import "layout/grid";
+@import "layout/footer";
+
 @import "pages/home";
