--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,9 +8,26 @@
 
 html {
   // defining what 1rem equals to
-  font-size: 62.5%;
+  font-size: 62.5%; // 1rem  = 10px; 10/16 = 62.5%
+
+  @include respond(desk-big) {
+    font-size: 75%; // 1rem = 12px , 12/16 = 75%;
+  }
+
+  @include respond(tab-lan) {
+    font-size: 56.25%; // 1rem  = 9px; 9/16 = 56.25%;
+  }
+
+  @include respond(tab-por) {
+    font-size: 50%; // 1rem  = 8px; 8/16 = 50%;
+  }
 }
 
 body {
   box-sizing: border-box;
+  padding: 2rem;
+
+  @include respond(tab-por) {
+    padding: 0;
+  }
 }
