--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+/*
+$breakpoint argument choices:
+-phone
+-tab-por
+-tab-lan
+-desk-big
+
+1rem = 16px
+*/
 @keyframes moveToRight {
   0% {
     opacity: 0;
@@ -35,17 +44,29 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 112.5em) {
+    html {
+      font-size: 75%; } }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
 
 body {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  padding: 2rem; }
+  @media (max-width: 56.25em) {
+    body {
+      padding: 0; } }
 
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 1.7;
-  color: #777;
-  padding: 2rem; }
+  color: #777; }
 
 .header-primary {
   color: #fff;
@@ -58,6 +79,14 @@ body {
     animation-name: moveToRight;
     animation-duration: 1s;
     animation-timing-function: ease-in; }
+    @media (max-width: 37.5em) {
+      .header-primary--main {
+        letter-spacing: 1.5rem;
+        font-size: 4rem; } }
+    @media (max-width: 56.25em) {
+      .header-primary--main {
+        letter-spacing: 2.5rem;
+        font-size: 4rem; } }
   .header-primary--sub {
     display: block;
     font-size: 2rem;
@@ -66,6 +95,14 @@ body {
     animation-name: moveToLeft;
     animation-duration: 1s;
     animation-timing-function: ease-in; }
+    @media (max-width: 37.5em) {
+      .header-primary--sub {
+        letter-spacing: 0.5rem;
+        font-size: 1rem; } }
+    @media (max-width: 56.25em) {
+      .header-primary--sub {
+        letter-spacing: 1rem;
+        font-size: 1.5rem; } }
 
 .header-secondary {
   font-size: 3.5rem;
@@ -77,6 +114,12 @@ body {
   color: transparent;
   letter-spacing: 0.2rem;
   transition: all 0.2s; }
+  @media (max-width: 56.25em) {
+    .header-secondary {
+      font-size: 2.5rem; } }
+  @media (max-width: 37.5em) {
+    .header-secondary {
+      font-size: 2rem; } }
   .header-secondary:hover {
     transform: skewX(10deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
@@ -100,9 +143,15 @@ body {
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-medium {
+      margin-bottom: 2rem; } }
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-big {
+      margin-bottom: 5rem !important; } }
 
 .u-align-left {
   text-align: left !important; }
@@ -130,6 +179,9 @@ body {
   display: block;
   font-family: inherit;
   transition: all 0.3s; }
+  @media (max-width: 56.25em) {
+    .form__input {
+      width: 100%; } }
   .form__input:focus {
     outline: none;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
@@ -155,6 +207,10 @@ body {
 .form__radio-group {
   width: 49%;
   display: inline-block; }
+  @media (max-width: 56.25em) {
+    .form__radio-group {
+      width: 100%;
+      margin-bottom: 1.5rem; } }
 
 .form__radio-label {
   font-size: 1.6rem;
@@ -273,15 +329,35 @@ body {
     transition: all 0.2s;
     outline-offset: 2rem;
     z-index: 10; }
+    @media (max-width: 56.25em) {
+      .composition__photo {
+        float: left;
+        position: relative;
+        width: 33.3333%;
+        box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2); } }
     .composition__photo--ph1 {
       left: 0;
       top: -2rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--ph1 {
+          top: 0;
+          transform: scale(1.2); } }
     .composition__photo--ph2 {
       right: 0;
       top: 2rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--ph2 {
+          top: -1rem;
+          transform: scale(1.3);
+          z-index: 100; } }
     .composition__photo--ph3 {
       left: 22%;
       top: 10rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--ph3 {
+          top: 1rem;
+          left: 0;
+          transform: scale(1); } }
     .composition__photo:hover {
       transform: scale(1.2);
       box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
@@ -387,7 +463,8 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 90%; }
+    width: 90%;
+    padding: 7rem 4rem 4rem 4rem; }
   .card__price-box {
     color: #fff; }
   .card__price-only {
@@ -395,41 +472,89 @@ body {
   .card__price-value {
     font-size: 6rem;
     font-weight: 100; }
+  @media (max-width: 56.25em) {
+    .card {
+      height: auto;
+      border-radius: 3px;
+      background-color: #fff;
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+      .card__side {
+        height: auto;
+        position: relative;
+        box-shadow: none; }
+        .card__side--back {
+          transform: rotateY(0);
+          clip-path: polygon(0 15%, 100% 0%, 100% 100%, 0 100%); }
+      .card:hover .card__side--front {
+        transform: rotateY(0); }
+      .card__cta {
+        position: relative;
+        top: 0;
+        left: 0;
+        transform: translate(0);
+        width: 100%;
+        padding: 4rem; }
+      .card__price-value {
+        font-size: 6rem; }
+      .card__details {
+        padding: 0 4rem; } }
 
 .story {
   width: 75%;
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
   background-color: rgba(255, 255, 255, 0.6);
-  border-radius: 5px;
+  border-radius: 3px;
   padding: 6rem;
   padding-left: 9rem;
   font-size: 1.6rem;
   transform: skewX(-12deg); }
-  .story > * {
-    transform: skewX(12deg); }
+  @media (max-width: 56.25em) {
+    .story {
+      width: 100%;
+      padding: 4rem;
+      padding-left: 7rem;
+      font-size: 1.5rem; } }
+  @media (max-width: 37.5em) {
+    .story {
+      transform: skewX(0);
+      width: 100%;
+      font-size: 1rem; } }
   .story__shape {
     width: 15rem;
     height: 15rem;
-    background-color: orange;
     float: left;
     -webkit-shape-outside: circle(50% at 50% 50%);
     shape-outside: circle(50% at 50% 50%);
     -webkit-clip-path: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
-    transform: translateX(-3rem) skewX(12.01deg);
-    position: relative; }
+    transform: translateX(-3rem) skewX(12deg);
+    position: relative;
+    overflow: hidden; }
+    @media (max-width: 37.5em) {
+      .story__shape {
+        transform: translateX(-3rem) skewX(0); } }
+    @media (min-width: 1200px) {
+      .story__shape {
+        overflow: hidden; } }
   .story__image {
     height: 100%;
     transform: translateX(-4rem) scale(1.4);
+    backface-visibility: hidden;
     transition: all 0.5s;
-    backface-visibility: hidden; }
+    display: hidden; }
+  .story__text {
+    transform: skewX(12deg); }
+    @media (max-width: 37.5em) {
+      .story__text {
+        transform: translateX(-3rem) skewX(0); } }
   .story__caption {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, 20%);
     color: #fff;
+    text-transform: uppercase;
     font-size: 1.7rem;
     text-align: center;
     opacity: 0;
@@ -438,7 +563,7 @@ body {
   .story:hover .story__caption {
     opacity: 1;
     transform: translate(-50%, -50%); }
-  .story:hover .story__image {
+  .story:hover .story__img {
     transform: translateX(-4rem) scale(1);
     filter: blur(3px) brightness(80%); }
 
@@ -469,6 +594,12 @@ body {
   border-radius: 50%;
   text-align: center;
   cursor: pointer; }
+  @media (max-width: 56.25em) {
+    .navigation__button {
+      top: 4rem;
+      right: 4rem;
+      height: 6rem;
+      width: 6rem; } }
 
 .navigation__background {
   height: 6rem;
@@ -480,6 +611,10 @@ body {
   background-image: radial-gradient(#7ed56f, #28b485);
   z-index: 100;
   transition: all 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
+  @media (max-width: 56.25em) {
+    .navigation__background {
+      top: 4rem;
+      right: 4rem; } }
 
 .navigation__nav {
   height: 100vh;
@@ -517,6 +652,9 @@ body {
   .navigation__link:link span, .navigation__link:visited span {
     margin-right: 1.5rem;
     display: inline-block; }
+  @media (max-width: 37.5em) {
+    .navigation__link:link, .navigation__link:visited {
+      font-size: 1.6rem; } }
 
 .navigation__link:hover, .navigation__link:active {
   background-position: 100%;
@@ -532,10 +670,13 @@ body {
 
 .navigation__icon {
   position: relative;
-  margin-top: 3.2rem; }
+  margin-top: 3.4rem; }
+  @media (max-width: 56.25em) {
+    .navigation__icon {
+      margin-top: 2.9rem; } }
   .navigation__icon, .navigation__icon::after, .navigation__icon::before {
     width: 3rem;
-    height: 1.5px;
+    height: 2.5px;
     background-color: #777;
     display: inline-block; }
   .navigation__icon::after, .navigation__icon::before {
@@ -559,14 +700,104 @@ body {
   top: 0;
   transform: rotate(-135deg); }
 
+.popup {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 250;
+  transition: all 0.3s;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px); }
+  .popup__content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 40rem;
+    background-color: #fff;
+    box-shadow: 0 3rem 4rem rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    display: table;
+    overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0);
+    transition: all 0.4s 0.2s; }
+  .popup__left {
+    width: 33.333333%;
+    display: table-cell; }
+    @media (max-width: 56.25em) {
+      .popup__left {
+        display: flex;
+        width: 50%; } }
+  .popup__right {
+    width: 66.666666%;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 2rem 5rem; }
+    @media (max-width: 56.25em) {
+      .popup__right {
+        display: flex;
+        width: 95%;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        margin-left: 3rem;
+        align-items: center; } }
+  .popup__img {
+    display: block;
+    width: 100%; }
+  .popup__text {
+    font-size: 1.4rem;
+    -moz-column-count: 2;
+    -moz-column-rule: 4rem;
+    -moz-column-gap: 1px solid #e7e7e7;
+    column-count: 2;
+    column-gap: 4rem;
+    column-rule: 1px solid #e7e7e7;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto; }
+  .popup:target {
+    opacity: 1;
+    visibility: visible; }
+  .popup:target .popup__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1); }
+  .popup__close:link, .popup__close:visited {
+    color: #777;
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    font-size: 3rem;
+    text-decoration: none;
+    display: inline-block;
+    transition: all 0.2s;
+    line-height: 1; }
+  .popup__close:hover {
+    color: #55c57a; }
+
 .header {
   position: relative;
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero-small.jpg");
   background-size: cover;
   background-position: top;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
+  @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
+    .header {
+      background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg"); } }
+  @media (max-width: 37.5em) {
+    .header {
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
   .header__logo-box {
     position: absolute;
     top: 4.5rem;
@@ -585,6 +816,15 @@ body {
   margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
+    @media (max-width: 56.25em) {
+      .row:not(:last-child) {
+        margin-bottom: 6rem; } }
+  @media (max-width: 56.25em) {
+    .row {
+      max-width: 50%; } }
+  @media (max-width: 56.25em) {
+    .row {
+      max-width: 75%; } }
   .row::after {
     content: "";
     display: table;
@@ -596,6 +836,12 @@ body {
   text-align: center; }
   [class^="col-"]:not(:last-child) {
     margin-right: 4rem; }
+    @media (max-width: 56.25em) {
+      [class^="col-"]:not(:last-child) {
+        margin-right: 0; } }
+  @media (max-width: 56.25em) {
+    [class^="col-"] {
+      width: 100% !important; } }
 
 .col-1-of-2 {
   width: calc((100% - 4rem) / 2); }
@@ -619,6 +865,9 @@ body {
   background-color: #333;
   padding: 10rem 0;
   font-size: 1.4rem; }
+  @media (max-width: 56.25em) {
+    .footer {
+      padding: 8rem 0; } }
   .footer__logo-box {
     text-align: center;
     margin-bottom: 8rem; }
@@ -629,6 +878,10 @@ body {
     border-top: 1px solid #777;
     padding: 2rem;
     display: inline-block; }
+    @media (max-width: 56.25em) {
+      .footer__navigation {
+        width: 100%;
+        text-align: center; } }
   .footer__list {
     list-style: none; }
   .footer__item {
@@ -650,6 +903,10 @@ body {
     border-top: 1px solid #777;
     padding-top: 2rem;
     float: right; }
+    @media (max-width: 56.25em) {
+      .footer__copyright {
+        width: 100%;
+        text-align: center; } }
 
 .section-about {
   background-color: #e7e7e7;
@@ -664,11 +921,14 @@ body {
   margin-top: -8rem; }
   .section-features > * {
     transform: skewY(7deg); }
+  @media (max-width: 56.25em) {
+    .section-features {
+      padding: 10rem 0; } }
 
 .section-tours {
   background-color: #e7e7e7;
   margin-top: -20vh;
-  padding: 25rem 0 10rem 0; }
+  padding: 30rem 0 10rem 0; }
 
 .section-stories {
   position: relative;
@@ -682,8 +942,13 @@ body {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
   background-size: cover;
   border-radius: 3px;
-  box-shadow: 0 1.5 4rem rgba(0, 0, 0, 0.2);
-  height: 50rem; }
+  box-shadow: 0 1.5 4rem rgba(0, 0, 0, 0.2); }
+  @media (max-width: 56.25em) {
+    .book {
+      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../img/nat-10.jpg); } }
   .book__form {
     width: 50%;
     padding: 6rem; }
+    @media (max-width: 56.25em) {
+      .book__form {
+        width: 100%; } }
