--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -21,6 +21,7 @@ $color-black: #000;
 
 $grid-width: 120rem;
 $gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
 $gutter-horizontal: 4rem;
 
 $default-font-size: 1.6rem;
