--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -152,6 +152,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 90%;
+    padding: 7rem 4rem 4rem 4rem;
   }
   &__price-box {
     color: $color-white;
@@ -162,5 +163,44 @@
   &__price-value {
     font-size: 6rem;
     font-weight: 100;
+  }
+
+  @include respond(tab-por) {
+    height: auto;
+    border-radius: 3px;
+    background-color: $color-white;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+
+    &__side {
+      height: auto;
+      position: relative;
+      box-shadow: none;
+
+      &--back {
+        transform: rotateY(0);
+        clip-path: polygon(0 15%, 100% 0%, 100% 100%, 0 100%);
+      }
+    }
+    &:hover &__side--front {
+      transform: rotateY(0);
+    }
+
+    //   CARD BACK STYLING
+
+    &__cta {
+      position: relative;
+      top: 0;
+      left: 0;
+      transform: translate(0);
+      width: 100%;
+      padding: 4rem;
+    }
+
+    &__price-value {
+      font-size: 6rem;
+    }
+    &__details {
+      padding: 0 4rem;
+    }
   }
 }
