--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -9,17 +9,39 @@
     outline-offset: 2rem;
     z-index: 10;
 
+    @include respond(tab-por) {
+      float: left;
+      position: relative;
+      width: 33.3333%;
+      box-shadow: 0 2rem 4rem rgba($color-black, 0.2);
+    }
+
     &--ph1 {
       left: 0;
       top: -2rem;
+
+      @include respond(tab-por) {
+        top: 0;
+        transform: scale(1.2);
+      }
     }
     &--ph2 {
       right: 0;
       top: 2rem;
+      @include respond(tab-por) {
+        top: -1rem;
+        transform: scale(1.3);
+        z-index: 100;
+      }
     }
     &--ph3 {
       left: 22%;
       top: 10rem;
+      @include respond(tab-por) {
+        top: 1rem;
+        left: 0;
+        transform: scale(1);
+      }
     }
     &:hover {
       transform: scale(1.2);
