--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -14,6 +14,10 @@
     font-family: inherit;
     transition: all 0.3s;
 
+    @include respond(tab-por) {
+      width: 100%;
+    }
+
     &:focus {
       outline: none;
       box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
@@ -45,6 +49,11 @@
   &__radio-group {
     width: 49%;
     display: inline-block;
+
+    @include respond(tab-por) {
+      width: 100%;
+      margin-bottom: 1.5rem;
+    }
   }
   &__radio-label {
     font-size: $default-font-size;
