--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -14,6 +14,13 @@
     border-radius: 50%;
     text-align: center;
     cursor: pointer;
+
+    @include respond(tab-por) {
+      top: 4rem;
+      right: 4rem;
+      height: 6rem;
+      width: 6rem;
+    }
   }
 
   &__background {
@@ -29,6 +36,11 @@
     );
     z-index: 100;
     transition: all 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+
+    @include respond(tab-por) {
+      top: 4rem;
+      right: 4rem;
+    }
   }
 
   &__nav {
@@ -77,6 +89,9 @@
         margin-right: 1.5rem;
         display: inline-block;
       }
+      @include respond(phone) {
+        font-size: 1.6rem;
+      }
     }
 
     &:hover,
@@ -101,13 +116,17 @@
 
   &__icon {
     position: relative;
-    margin-top: 3.2rem;
+    margin-top: 3.4rem;
+
+    @include respond(tab-por) {
+      margin-top: 2.9rem;
+    }
 
     &,
     &::after,
     &::before {
       width: 3rem;
-      height: 1.5px;
+      height: 2.5px;
       background-color: $color-grey-dark;
       display: inline-block;
     }
