--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -3,36 +3,57 @@
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba($color-black, 0.1);
   background-color: rgba($color-white, 0.6);
-  border-radius: 5px;
+  border-radius: 3px;
   padding: 6rem;
   padding-left: 9rem;
   font-size: $default-font-size;
   transform: skewX(-12deg);
 
-  & > * {
-    transform: skewX(12deg);
+  @include respond(tab-por) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+    font-size: 1.5rem;
+  }
+
+  @include respond(phone) {
+    transform: skewX(0);
+    width: 100%;
+    font-size: 1rem;
   }
 
   &__shape {
     width: 15rem;
     height: 15rem;
-    background-color: orange;
     float: left;
     -webkit-shape-outside: circle(50% at 50% 50%);
     shape-outside: circle(50% at 50% 50%);
-
     -webkit-clip-path: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
-    transform: translateX(-3rem) skewX(12.01deg);
+    transform: translateX(-3rem) skewX(12deg);
     position: relative;
+    overflow: hidden;
+    @include respond(phone) {
+      transform: translateX(-3rem) skewX(0);
+    }
+    @media (min-width: 1200px) {
+      overflow: hidden;
+    }
   }
+
   &__image {
     height: 100%;
     transform: translateX(-4rem) scale(1.4);
-    transition: all 0.5s;
     backface-visibility: hidden;
+    transition: all 0.5s;
+    display: hidden;
   }
+
   &__text {
+    transform: skewX(12deg);
+    @include respond(phone) {
+      transform: translateX(-3rem) skewX(0);
+    }
   }
 
   &__caption {
@@ -41,17 +62,20 @@
     left: 50%;
     transform: translate(-50%, 20%);
     color: $color-white;
+    text-transform: uppercase;
     font-size: 1.7rem;
     text-align: center;
     opacity: 0;
     transition: all 0.5s;
     backface-visibility: hidden;
   }
+
   &:hover &__caption {
     opacity: 1;
     transform: translate(-50%, -50%);
   }
-  &:hover &__image {
+
+  &:hover &__img {
     transform: translateX(-4rem) scale(1);
     filter: blur(3px) brightness(80%);
   }
