--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,6 +3,10 @@
   padding: 10rem 0;
   font-size: 1.4rem;
 
+  @include respond(tab-por) {
+    padding: 8rem 0;
+  }
+
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
@@ -17,6 +21,11 @@
     border-top: 1px solid $color-grey-dark;
     padding: 2rem;
     display: inline-block;
+
+    @include respond(tab-por) {
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__list {
@@ -52,5 +61,10 @@
     border-top: 1px solid $color-grey-dark;
     padding-top: 2rem;
     float: right;
+
+    @include respond(tab-por) {
+      width: 100%;
+      text-align: center;
+    }
   }
 }
