--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,8 @@
 @import "components/story";
 @import "components/bg-video";
 @import "components/navigation";
+@import "components/popup";
+
 @import "layout/header";
 @import "layout/grid";
 @import "layout/footer";
